--- a/config.yaml
+++ b/config.yaml
@@ -60,5 +60,5 @@ patience: 5
 evaluation_interval: 7500
 save_interval: 7500
 warmup_steps: 3750
-batch_size: 32
-num_steps: 1500000
+batch_size: 16 #32
+num_steps: 3000000 #1500000
